<resources>
    <string name="app_name">CocktailBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktails">Cocktails</string>
    <string name="favorites">Favorites</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="glass">Glass</string>
    <string name="ordinary_drink">Ordinary Drink</string>
    <string name="cocktail">Cocktail</string>
    <string name="shake">Shake</string>
    <string name="cocoa">Cocoa</string>
    <string name="shot">Shot</string>
    <string name="coffee_tea">Coffee / Tea</string>
    <string name="homemade_liqueur">Homemade Liqueur</string>
    <string name="punch_party_drink">Punch / Party Drink</string>
    <string name="beer">Beer</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="highball_glass">Highball glass</string>
    <string name="cocktail_glass">Cocktail glass</string>
    <string name="whiskey_glass">Whiskey Glass</string>
    <string name="collins_glass">Collins glass</string>
    <string name="martini_glass">Martini Glass</string>
    <string name="coupe_glass">Coupe Glass</string>
    <string name="brandy_snifter">Brandy snifter</string>
    <string name="champagne_flute">Champagne flute</string>
    <string name="shot_glass">Shot glass</string>
    <string name="wine_glass">Wine Glass</string>
    <string name="old_fashioned_glass">Old-fashioned glass</string>
    <string name="hurricane_glass">Hurricane glass</string>
    <string name="balloon_glass">Balloon Glass</string>
    <string name="pint_glass">Pint glass</string>
    <string name="margarita_glass">Margarita glass</string>
    <string name="light_rum">Light rum</string>
    <string name="dark_rum">Dark rum</string>
    <string name="gin">Gin</string>
    <string name="applejack">Applejack</string>
    <string name="sweet_vermouth">Sweet Vermouth</string>
    <string name="dry_vermouth">Dry Vermouth</string>
    <string name="scotch">Scotch</string>
    <string name="apricot_brandy">Apricot brandy</string>
    <string name="brandy">Brandy</string>
    <string name="apple_brandy">Apple brandy</string>
    <string name="cherry_brandy">Cherry brandy</string>
    <string name="triple_sec">Triple sec</string>
    <string name="champagne">Champagne</string>
    <string name="tequila">Tequila</string>
    <string name="vodka">Vodka</string>
    <string name="rum">Rum</string>
    <string name="red_wine">Red wine</string>
    <string name="southern_comfort">Southern Comfort</string>
    <string name="alcoholic_type">Alcoholic type</string>
    <string name="non_alcoholic">Non alcoholic</string>
    <string name="optional_alcohol">Optional alcohol</string>
    <string name="ingredients">Ingredients</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="instruction">Instruction:</string>
    <string name="textLoading">...</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_cocktails">No favorite cocktails!</string>
    <string name="delete_favorite_cocktail_menu">Delete Favorite Cocktail Menu</string>
    <string name="delete_all_favorite_cocktails">Delete All Favorite Cocktails</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="ingredient_information">Ingredient Information</string>
    <string name="type">Type:</string>
    <string name="alcohol">Alcohol:</string>
</resources>